Add v2 update user endpoint and Swagger documentation
