# src/routes/userRoutes.js
@@ -7,6 +7,7 @@ const userController = new UserController();
 router.post('/', userController.createUser);
 router.get('/:id', userController.getUser);
 router.put('/:id', userController.updateUser);
+router.put('/:id/update', userController.updateUserV2);
 router.delete('/:id', userController.deleteUser);
 
 export default router; // Export the router directly
